Rating Popup required on Success popup, average click, Username cutoff issue, class owner name cutoff issues resolved

--- a/src/main/java/org/ednovo/gooru/client/mvp/classpages/classlist/classlistPage.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/classpages/classlist/classlistPage.css
@@ -791,7 +791,7 @@ button[disable]:hover, .buttonTooltip:hover .tooltipContainer{
 }
 .usernameCss{
     display: inline-block;
-    width: 65%;
+    width: 30%;
     vertical-align: top;
     color: #515151;
     padding-left: 15px;
